Fixed parens not showing input bug

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .calculator-container {
-  margin: 2% 35%;
+  margin: 2% 37%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -12,3 +12,12 @@
   background: rgb(112, 57, 126);
 }
 
+
+@media (max-width: 600px) {
+  .App {
+    padding: 2%;
+  }
+  .calculator-container {
+    margin: 0;
+  }
+}
