--- a/src/components/input.css
+++ b/src/components/input.css
@@ -6,8 +6,8 @@
   color: rgb(255, 255, 255);
   justify-content: flex-end;
   align-items: center;
+  text-align: right;
   padding: 0.5em;
   font-weight: bold;
-  font-size: calc(25px + 6 * ((100vw - 320px) / 680));
-  display: block;
+  font-size: calc(20px + 6 * ((100vw - 320px) / 680));
 }
